--- a/Project.toml
+++ b/Project.toml
@@ -3,7 +3,13 @@ uuid = "1c8cf7b8-223b-484e-98e7-6240f1484c2c"
 authors = ["Maciej Paprota <mapap@ibwpan.gda.pl> and contributors"]
 version = "1.0.0-DEV"
 
+[deps]
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
+
 [compat]
+LinearAlgebra = "1.11.0"
+ProgressMeter = "1.10.2"
 julia = "1.10"
 
 [extras]
