--- a/Project.toml
+++ b/Project.toml
@@ -4,10 +4,12 @@ authors = ["Maciej Paprota <mapap@ibwpan.gda.pl> and contributors"]
 version = "1.0.0-DEV"
 
 [deps]
+BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 
 [compat]
+BenchmarkTools = "1.5.0"
 LinearAlgebra = "1.11.0"
 ProgressMeter = "1.10.2"
 julia = "1.10"
