--- a/Project.toml
+++ b/Project.toml
@@ -5,11 +5,13 @@ version = "1.0.0-DEV"
 
 [deps]
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
+CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 
 [compat]
 BenchmarkTools = "1.5.0"
+CairoMakie = "0.13.0"
 LinearAlgebra = "1.11.0"
 ProgressMeter = "1.10.2"
 julia = "1.10"
