--- a/Project.toml
+++ b/Project.toml
@@ -4,10 +4,12 @@ authors = ["Maciej Paprota <mapap@ibwpan.gda.pl> and contributors"]
 version = "1.0.0-DEV"
 
 [deps]
+CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 
 [compat]
+CairoMakie = "0.13.1"
 LinearAlgebra = "1.11.0"
 ProgressMeter = "1.10.2"
 julia = "1.11"
