--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -24,9 +24,8 @@ jobs:
       matrix:
         version:
           - '1.11'
-          - 'pre'
         os:
-          - ubuntu-latest
+          - ubuntu-20.04
         arch:
           - x64
     steps:
