--- a/Project.toml
+++ b/Project.toml
@@ -5,11 +5,13 @@ version = "1.0.5"
 
 [deps]
 DSP = "717857b8-e6f2-59f4-9121-6e50c889abd2"
+GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 
 [compat]
 DSP = "0.8.2"
+GLMakie = "0.11.5"
 LinearAlgebra = "1.11.0"
 ProgressMeter = "1.10.2"
 julia = "1.11"
